--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-native-webrtc": "^124.0.4",
+    "react-router-dom": "^7.1.1",
+    "react-use": "^17.6.0",
+    "speech-to-text": "^2.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
